[gd_scene load_steps=10 format=3 uid="uid://main_menu001"]

[ext_resource type="Script" path="res://scripts/ui/main_menu_controller.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://stash_panel001" path="res://scenes/ui/stash_panel.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://market_panel001" path="res://scenes/ui/market_panel.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://merchant_panel001" path="res://scenes/ui/merchant_panel.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://trading_panel001" path="res://scenes/ui/trading_panel.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://lobby_panel001" path="res://scenes/ui/lobby_panel.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://play_mode_panel001" path="res://scenes/ui/play_mode_panel.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://char_select001" path="res://scenes/ui/character_select_panel.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://menu_3d_bg001" path="res://scenes/ui/main_menu_3d_background.tscn" id="9"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background3D" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Background3D"]
transparent_bg = false
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Scene3D" parent="Background3D/SubViewport" instance=ExtResource("9")]

[node name="BackgroundOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.3)

[node name="TopTabs" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 50.0
offset_top = 20.0
offset_right = -50.0
offset_bottom = 70.0
theme_override_constants/separation = 10

[node name="MarketTab" type="Button" parent="TopTabs"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "MARKET"

[node name="MerchantTab" type="Button" parent="TopTabs"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "MERCHANT"

[node name="LeaderboardTab" type="Button" parent="TopTabs"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "LEADERBOARD"

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerInfo" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 100.0
theme_override_constants/separation = 5

[node name="SurvivorName" type="Label" parent="MainPanel/PlayerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "[Survivor Name]"
horizontal_alignment = 1

[node name="RankPrestige" type="Label" parent="MainPanel/PlayerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "[rank], [prestige], [icon]"
horizontal_alignment = 1

[node name="CharacterPreview" type="Panel" parent="MainPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -80.0
offset_right = 60.0
offset_bottom = 30.0

[node name="PreviewLabel" type="Label" parent="MainPanel/CharacterPreview"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
text = "forge
less"
horizontal_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -200.0
offset_right = -50.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_constants/separation = 10

[node name="PlayButton" type="Button" parent="MainPanel/MenuButtons"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "PLAY"

[node name="StashButton" type="Button" parent="MainPanel/MenuButtons"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "STASH"

[node name="SettingsButton" type="Button" parent="MainPanel/MenuButtons"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="MainPanel/MenuButtons"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "QUIT"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -10.0
grow_vertical = 0
text = "version - x.xx"

[node name="StashPanel" parent="." instance=ExtResource("2")]

[node name="MarketPanel" parent="." instance=ExtResource("3")]

[node name="MerchantPanel" parent="." instance=ExtResource("4")]

[node name="TradingPanel" parent="." instance=ExtResource("5")]

[node name="LobbyPanel" parent="." instance=ExtResource("6")]

[node name="PlayModePanel" parent="." instance=ExtResource("7")]
visible = false

[node name="CharacterSelectPanel" parent="." instance=ExtResource("8")]
visible = false

[node name="GameTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 100.0
offset_right = 300.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "ZOMBIE SURVIVAL"
horizontal_alignment = 1

[node name="LeaderboardPanel" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="LeaderboardPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.08, 0.98)

[node name="Title" type="Label" parent="LeaderboardPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "LEADERBOARD"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="LeaderboardPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
text = "X"

[node name="SettingsPanel" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.08, 0.98)

[node name="Title" type="Label" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "SETTINGS"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
text = "X"
